# docs/swagger.json
@@ -63,6 +63,15 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    {
+                        "description": "param",
+                        "name": "param",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
